# activity_detect_linfa_wasm

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
web/: index.html  main.js
